# BackEnd/internal/handler/blog.go
@@ -29,7 +29,6 @@ func NewBlogHandler(service *service.BlogService) *BlogHandler {
 // @Success 201 {object} model.Blog
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
-<<<<<<< HEAD
 // @Security ApiKeyAuth
 // @Router /api/v1/blogs/ [post]
 func (h *BlogHandler) CreateBlog(c *gin.Context) {
@@ -46,13 +45,6 @@ func (h *BlogHandler) CreateBlog(c *gin.Context) {
 
 	var input model.RegisterBlog
 	if err := c.ShouldBind(&input); err != nil {
-=======
-// @Security BearerAuth
-// @Router /api/v1/blogs [post]
-func (h *BlogHandler) Create(c *gin.Context) {
-	var input model.Blog
-	if err := c.ShouldBindJSON(&input); err != nil {
->>>>>>> master
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
@@ -63,7 +55,6 @@ func (h *BlogHandler) Create(c *gin.Context) {
 		return
 	}
 
-<<<<<<< HEAD
 	files := form.File["files"]
 
 	blogInput := &model.RequestBlog{
@@ -94,11 +85,6 @@ func (h *BlogHandler) Create(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"message": "successfully create blog",
 		"data":    blogResponse,
-=======
-	c.JSON(http.StatusCreated, gin.H{
-		"message": "Blog created successfully",
-		"blog":    input,
->>>>>>> master
 	})
 }
 
@@ -111,7 +97,6 @@ func (h *BlogHandler) Create(c *gin.Context) {
 // @Failure 500 {object} map[string]string
 // @Security BearerAuth
 // @Router /api/v1/blogs [get]
-<<<<<<< HEAD
 func (h *BlogHandler) GetAllBlogs(c *gin.Context) {
 	// role := c.MustGet("role").(string)
 	ctx := c.Request.Context()
@@ -122,10 +107,6 @@ func (h *BlogHandler) GetAllBlogs(c *gin.Context) {
 
 	// service blog
 	blogs, totalData, err := h.Service.GetAllBlogs(ctx, page, limit)
-=======
-func (h *BlogHandler) List(c *gin.Context) {
-	blogs, err := h.Service.Model.GetAllBlogs()
->>>>>>> master
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error":   err.Error(),
@@ -156,22 +137,14 @@ func (h *BlogHandler) List(c *gin.Context) {
 // @Failure 404 {object} map[string]string
 // @Security BearerAuth
 // @Router /api/v1/blogs/{id} [get]
-<<<<<<< HEAD
 func (h *BlogHandler) GetBlogByID(c *gin.Context) {
-=======
-func (h *BlogHandler) Get(c *gin.Context) {
->>>>>>> master
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
 		return
 	}
-<<<<<<< HEAD
 
 	blog, err := h.Service.GetBlogByID(id)
-=======
-	blog, err := h.Service.Model.GetBlogById(id)
->>>>>>> master
 	if err != nil {
 		c.JSON(http.StatusNotFound, gin.H{
 			"error": "blog not found",
@@ -179,68 +152,12 @@ func (h *BlogHandler) Get(c *gin.Context) {
 		return
 	}
 
-<<<<<<< HEAD
-=======
-// Update Blog godoc
-// @Summary Update blog
-// @Description Update existing blog post
-// @Tags Blog
-// @Accept json
-// @Produce json
-// @Param id path int true "Blog ID"
-// @Param blog body model.BlogPatch true "Update data"
-// @Success 200 {object} model.Blog
-// @Failure 400 {object} map[string]string
-// @Failure 404 {object} map[string]string
-// @Failure 500 {object} map[string]string
-// @Security BearerAuth
-// @Router /api/v1/blogs/{id} [put]
-func (h *BlogHandler) Update(c *gin.Context) {
-	id, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
-		return
-	}
-	var patch model.BlogPatch
-	if err := c.ShouldBindJSON(&patch); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	
-	blog, err := h.Service.Model.UpdateBlog(id, patch)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	c.JSON(http.StatusOK, blog)
-}
-
-// ListByKategori godoc
-// @Summary List blogs by category
-// @Description Get all blogs specific to a category
-// @Tags Blog
-// @Produce json
-// @Param kategori path string true "Category name"
-// @Success 200 {array} model.Blog
-// @Failure 500 {object} map[string]string
-// @Security BearerAuth
-// @Router /api/v1/blogs/kategori/{kategori} [get]
-func (h *BlogHandler) ListByKategori(c *gin.Context) {
-	kategori := c.Param("kategori")
-	blogs, err := h.Service.Model.GetBlogsByKategori(kategori)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to fetch blogs: " + err.Error()})
-		return
-	}
-	
->>>>>>> master
 	c.JSON(http.StatusOK, gin.H{
 		"message": "blog found successfully",
 		"blog":    blog,
 	})
 }
 
-<<<<<<< HEAD
 // Update Blog godoc
 // @Summary Update blog
 // @Description Update existing blog post
@@ -413,8 +330,6 @@ func (h *BlogHandler) ListBlogs(c *gin.Context) {
 	})
 }
 
-=======
->>>>>>> master
 // Delete Blog godoc
 // @Summary Delete blog
 // @Description Delete a blog post
@@ -434,7 +349,6 @@ func (h *BlogHandler) Delete(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
 		return
 	}
-<<<<<<< HEAD
 
 	allowedRoles := map[string]bool{
 		"KoorMedcrev": true,
@@ -446,10 +360,6 @@ func (h *BlogHandler) Delete(c *gin.Context) {
 		c.JSON(http.StatusUnauthorized, gin.H{
 			"error": "you're not allowed brotherr",
 		})
-=======
-	if err := h.Service.Model.DeleteBlog(id); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
->>>>>>> master
 		return
 	}
 
